contrib/mitab.pas


function  mitab_c_add_field              (handle: mitab_handle; field_name: pchar;field_type, width, precision: longint): longint;                              stdcall; external DLL Name '_mitab_c_add_field@20'            ;
procedure mitab_c_close                  (handle: mitab_handle);                                                                                                stdcall; external DLL Name '_mitab_c_close@4'                 ;
function  mitab_c_create                 (filename, mif_or_tab, mif_projectiondef: pchar; north, south, east, west: double): mitab_handle;                      stdcall; external DLL Name '_mitab_c_create@44'               ;
function  mitab_c_create_feature         (handle: mitab_handle; feature_type: longint): mitab_feature;                                                          stdcall; external DLL Name '_mitab_c_create_feature@8'        ;
procedure mitab_c_destroy_feature        (feature: mitab_feature);                                                                                              stdcall; external DLL Name '_mitab_c_destroy_feature@4'       ;
function  mitab_c_get_brush_bgcolor      (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_brush_bgcolor@4'     ;
function  mitab_c_get_brush_fgcolor      (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_brush_fgcolor@4'     ;
function  mitab_c_get_brush_pattern      (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_brush_pattern@4'     ;
function  mitab_c_get_brush_transparent  (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_brush_transparent@4' ;
function  mitab_c_get_field_as_string_vb (feature: mitab_feature; field: longint; value: pchar; l: longint): longint;                                           stdcall; external DLL Name '_mitab_c_get_field_as_string_vb@16';
function  mitab_c_get_field_as_string    (feature: mitab_feature; field: longint): pchar;                                                                       stdcall; external DLL Name '_mitab_c_get_field_as_string@8'   ;
function  mitab_c_get_field_count        (handle: mitab_handle): longint;                                                                                       stdcall; external DLL Name '_mitab_c_get_field_count@4'       ;
function  mitab_c_get_field_name_vb      (handle: mitab_handle; field: longint; name: pchar; l: longint): longint;						stdcall; external DLL Name '_mitab_c_get_field_name_vb@16'    ;
function  mitab_c_get_field_name         (handle: mitab_handle; field: longint): pchar;                                                                         stdcall; external DLL Name '_mitab_c_get_field_name@8'        ;
function  mitab_c_get_field_type         (handle: mitab_handle; field: longint): longint;                                                                       stdcall; external DLL Name '_mitab_c_get_field_type@8'        ;
function  mitab_c_get_font_vb            (feature: mitab_feature; font: pchar; l: longint): longint;                                                            stdcall; external DLL Name '_mitab_c_get_font_vb@12'          ;
function  mitab_c_get_font               (feature: mitab_feature): pchar;                                                                                       stdcall; external DLL Name '_mitab_c_get_font@4'              ;
function  mitab_c_get_mif_coordsys_vb    (dataset: mitab_handle; coordsys: pchar; l: longint): longint;								stdcall; external DLL Name '_mitab_c_get_mif_coordsys_vb@12'  ;
function  mitab_c_get_mif_coordsys       (dataset: mitab_handle): pchar;                                                                                        stdcall; external DLL Name '_mitab_c_get_mif_coordsys@4'      ;
function  mitab_c_get_parts              (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_parts@4'             ;
function  mitab_c_get_pen_color          (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_pen_color@4'         ;
function  mitab_c_get_pen_pattern        (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_pen_pattern@4'       ;
function  mitab_c_get_pen_width          (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_pen_width@4'         ;
function  mitab_c_get_projinfo           (dataset: mitab_handle): mitab_projinfo;                                                                               stdcall; external DLL Name '_mitab_c_get_projinfo@4'          ;
function  mitab_c_get_symbol_color       (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_symbol_color@4'      ;
function  mitab_c_get_symbol_no          (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_symbol_no@4'         ;
function  mitab_c_get_symbol_size        (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_symbol_size@4'       ;
function  mitab_c_get_text_vb            (feature: mitab_feature; text: pchar; l: longint): longint;                                                            stdcall; external DLL Name '_mitab_c_get_text_vb@12'          ;
function  mitab_c_get_text               (feature: mitab_feature): pchar;                                                                                       stdcall; external DLL Name '_mitab_c_get_text@4'              ;
function  mitab_c_get_text_angle         (feature: mitab_feature): double;                                                                                      stdcall; external DLL Name '_mitab_c_get_text_angle@4'        ;
function  mitab_c_get_text_bgcolor       (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_text_bgcolor@4'      ;
function  mitab_c_get_text_fgcolor       (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_text_fgcolor@4'      ;
function  mitab_c_get_text_height        (feature: mitab_feature): double;                                                                                      stdcall; external DLL Name '_mitab_c_get_text_height@4'       ;
function  mitab_c_get_text_justification (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_text_justification@4';
function  mitab_c_get_text_linetype      (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_text_linetype@4'     ;
function  mitab_c_get_text_spacing       (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_text_spacing@4'      ;
function  mitab_c_get_text_width         (feature: mitab_feature): double;                                                                                      stdcall; external DLL Name '_mitab_c_get_text_width@4'        ;
function  mitab_c_get_type               (feature: mitab_feature): longint;                                                                                     stdcall; external DLL Name '_mitab_c_get_type@4'              ;
function  mitab_c_get_vertex_count       (feature: mitab_feature; part: longint): longint;                                                                      stdcall; external DLL Name '_mitab_c_get_vertex_count@8'      ;
function  mitab_c_get_vertex_x           (feature: mitab_feature; part, vertex: longint): double;                                                               stdcall; external DLL Name '_mitab_c_get_vertex_x@12'         ;
function  mitab_c_get_vertex_y           (feature: mitab_feature; part, vertex: longint): double;                                                               stdcall; external DLL Name '_mitab_c_get_vertex_y@12'         ;
function  mitab_c_getlasterrormsg_vb     (errormsg: pchar; l: longint): longint;                                                                                stdcall; external DLL Name '_mitab_c_getlasterrormsg_vb@8'    ;
function  mitab_c_getlasterrormsg        (): pchar;                                                                                                             stdcall; external DLL Name '_mitab_c_getlasterrormsg@0'       ;
function  mitab_c_getlasterrorno         (): longint;                                                                                                           stdcall; external DLL Name '_mitab_c_getlasterrorno@0'        ;
function  mitab_c_next_feature_id        (handle: mitab_handle; last_feature_id: longint): longint;                                                             stdcall; external DLL Name '_mitab_c_next_feature_id@8'       ;
function  mitab_c_open                   (filename: pchar): mitab_handle;                                                                                       stdcall; external DLL Name '_mitab_c_open@4'                  ;
function  mitab_c_read_feature           (handle:  mitab_handle; feature_id: longint): mitab_feature;                                                           stdcall; external DLL Name '_mitab_c_read_feature@8'          ;
procedure mitab_c_set_arc                (feature: mitab_feature; center_x, center_y, x_radius, y_radius, start_angle, end_angle: double);                      stdcall; external DLL Name '_mitab_c_set_arc@52'              ;
procedure mitab_c_set_brush              (feature: mitab_feature; fg_color, bg_color, pattern, transparent: longint);                                           stdcall; external DLL Name '_mitab_c_set_brush@20'            ;
procedure mitab_c_set_field              (feature: mitab_feature; field_index: longint; value: pchar);                                                          stdcall; external DLL Name '_mitab_c_set_field@12'            ;
procedure mitab_c_set_font               (feature: mitab_feature; font_name: pchar);                                                                            stdcall; external DLL Name '_mitab_c_set_font@8'              ;
procedure mitab_c_set_pen                (feature: mitab_feature; width, pattern, color: longint);                                                              stdcall; external DLL Name '_mitab_c_set_pen@16'              ;
procedure mitab_c_set_points             (feature: mitab_feature; part, vertex_count: longint; var x,y: double);                                                stdcall; external DLL Name '_mitab_c_set_points@20'           ;
